[upgrade]:{upgrade gradle version to make build fast.}

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 14
         versionCode 1
         versionName "1.0"
+        ndk {
+            // Specifies the ABI configurations of your native
+            // libraries Gradle should build and package with your APK.
+            abiFilters 'armeabi-v7a'
+        }
     }
 
     buildTypes {
@@ -20,17 +25,15 @@ android {
     }
 
 
-    sourceSets {
-        main {
-            jni.srcDirs = []
-            jniLibs.srcDir 'libs'
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/jni/Android.mk')
         }
     }
 }
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:25.0.1'
 }
