--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
 
+    //If I don't write this line, C codes will build with latest version of NDK.
     ndkVersion "16.1.4479499"
 
     defaultConfig {
@@ -12,6 +13,8 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+
+        //In the event that I have not written this line, so file won't packaged into apk.
         ndk {
             abiFilters 'armeabi-v7a'
         }
