--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,16 @@ android {
         }
     }
 
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:25.0.1'
+    implementation 'com.android.support:appcompat-v7:24.0.0'
 //    implementation "com.android.support.constraint:constraint-layout:2.0.4"
     implementation project(':x264-codec')
 }
