[feat]:{add libopenh264.}

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:24.0.0'
 //    implementation "com.android.support.constraint:constraint-layout:2.0.4"
-    implementation project(':x264-codec')
+    implementation project(':openh264-codec')
 }
