--- a/openh264-codec/build.gradle
+++ b/openh264-codec/build.gradle
@@ -13,10 +13,17 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-        ndk {
-            // Specifies the ABI configurations of your native
-            // libraries Gradle should build and package with your APK.
-            abiFilters 'arm64-v8a'
+//        ndk {
+//            // Specifies the ABI configurations of your native
+//            // libraries Gradle should build and package with your APK.
+//            abiFilters 'arm64-v8a'
+//        }
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11"
+                abiFilters 'arm64-v8a','x86'// ,'armeabi-v7a',
+            }
         }
     }
 
@@ -26,11 +33,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     externalNativeBuild {
-        ndkBuild {
-            path file('src/main/jni/Android.mk')
+        cmake {
+            path "src/main/jni/CMakeLists.txt"
+            version "3.10.2"
         }
+//        ndkBuild {
+//            path file('src/main/jni/Android.mk')
+//        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
