--- a/openh264-codec/build.gradle
+++ b/openh264-codec/build.gradle
@@ -6,24 +6,24 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
 
-    ndkVersion "16.1.4479499"
+    ndkVersion '21.1.6352462'
+//    ndkVersion "16.1.4479499"
 
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-//        ndk {
-//            // Specifies the ABI configurations of your native
-//            // libraries Gradle should build and package with your APK.
-//            abiFilters 'arm64-v8a'
-//        }
 
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11"
-                abiFilters 'arm64-v8a','x86'// ,'armeabi-v7a',
+                abiFilters 'arm64-v8a', 'x86'// ,'armeabi-v7a',
             }
+
+//            ndk {
+//                abiFilters 'arm64-v8a'
+//            }
         }
     }
 
