--- a/openh264-codec/build.gradle
+++ b/openh264-codec/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
 }
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 24
@@ -54,4 +55,8 @@ android {
 
 dependencies {
     testImplementation 'junit:junit:4.+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
