--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
+apply from: '../base.gradle'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
 
-    //If I don't write this line, C codes will build with latest version of NDK.
-//    ndkVersion "16.1.4479499"
-    ndkVersion "21.4.7075529"
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.androidyuan.softcodec"
-        minSdkVersion 21
-        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
 
@@ -37,13 +35,14 @@ android {
 
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:24.0.0'
+    testImplementation 'androidx.test.ext:junit:1.13'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
 //    implementation "com.android.support.constraint:constraint-layout:2.0.4"
     implementation project(':openh264-codec')
+//    implementation project(':x264-codec')
+    kapt "com.android.databinding:compiler:$compiler_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 repositories {
     mavenCentral()
