--- a/x264-codec/build.gradle
+++ b/x264-codec/build.gradle
@@ -2,15 +2,11 @@ plugins {
     id 'com.android.library'
 }
 
-android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+apply from: '../base.gradle'
 
-    ndkVersion "16.1.4479499"
+android {
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         ndk {
