--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,13 @@ android {
 
 
 dependencies {
-    testImplementation 'androidx.test.ext:junit:1.13'
+
+    testImplementation 'org.testng:testng:6.9.6'
     implementation 'androidx.appcompat:appcompat:1.3.0'
 //    implementation "com.android.support.constraint:constraint-layout:2.0.4"
     implementation project(':openh264-codec')
 //    implementation project(':x264-codec')
     kapt "com.android.databinding:compiler:$compiler_version"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 repositories {
     mavenCentral()
