--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,18 @@ dependencies {
     implementation project(':openh264-codec')
 //    implementation project(':x264-codec')
     kapt "com.android.databinding:compiler:$compiler_version"
+
+
+    // CameraX core library
+    def camerax_version = '1.1.0-alpha05'
+    implementation "androidx.camera:camera-core:$camerax_version"
+    // CameraX Camera2 extensions
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    // CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    // CameraX View class
+    implementation 'androidx.camera:camera-view:1.0.0-alpha25'
+
 }
 repositories {
     mavenCentral()
